# flux

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  benchmark_test.go  bm25.go  config.go  docker-compose.yml  example_config.yaml  filter.go  go.mod  hnsw.go  hybrid.go  index.go  io.go  ivf.go  metrics.go  schema.go  snapshot.go  vcpkg.json  vector.go  vector_test.go  wal.go  webembed.go
cmd/flux/: main.go
docs/: api-protocol.md  flux-design.md  vector-database-design.md  向量数据库技术设计.md
examples/quickstart/: main.go
src/: CMakeLists.txt  bm25.cpp  bm25.h  config.cpp  config.h  database.cpp  database.h  distance.cpp  distance.h  filter.cpp  filter.h  hnsw.cpp  hnsw.h  io.cpp  io.h  ivf.cpp  ivf.h  main.cpp  schema.cpp  schema.h  server.cpp  server.h  types.h  wal.cpp  wal.h
tests/: CMakeLists.txt  test_config.cpp  test_distance.cpp  test_engine.cpp  test_index.cpp
web/: app.js  index.html  style.css
